# boba

./: .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  CNAME  LICENSE  Makefile  README.md  boba.sln  go.mod  go.sum  index.md  main.c  main.go
.github/workflows/: codeql-analysis.yml  dotnet.yml
Boba.Compiler/: Boba.Compiler.fsproj  BublGen.fs  BytecodeGen.fs  COutputGen.fs  Condenser.fs  CoreGen.fs  Documentation.fs  Elaboration.fs  GoOutputGen.fs  Inference.fs  KindInference.fs  Lexer.fs  Lexer.fsl  MochiGen.fs  Parser.fs  Parser.fsi  Parser.fsy  Parser.fsyacc.output  Primitives.fs  Program.fs  Renamer.fs  Shell.fs  Syntax.fs  TestGenerator.fs  TypeInference.fs  UnitDependencies.fs  UnitImport.fs
Boba.Core/: Abelian.fs  Boba.Core.fsproj  Boolean.fs  CHR.fs  Common.fs  Declarations.fs  DotSeq.fs  Environment.fs  Expression.fs  Fresh.fs  Inference.fs  Kinds.fs  Library.fs  Linear.fs  Matching.fs  Predicates.fs  QuineMcCluskey.fs  Substitution.fs  Syntax.fs  TypeBuilder.fs  Types.fs  Unification.fs
Boba.Core.Test/: AbelianTest.fs  AbelianTests.fs  Boba.Core.Test.fsproj  BooleanTests.fs  CHRTests.fs  DotSeqTests.fs  InferenceTests.fs  KindTests.fs  LinearTest.fs  LinearTests.fs  QuineMcCluskeyTest.fs  SubstitutionTests.fs  Tests.fs  UnificationTests.fs
Boba.Core.Tests/: AbelianTest.fs  Boba.Core.Tests.fsproj  LinearTest.fs
Bubl/: Bubl.Core.fsproj  Instructions.fs  Permissions.fs
Bubl.Simulator/: Bubl.Simulator.fsproj  Evaluation.fs  Machine.fs
Mochi.Core/: Instructions.fs  Mochi.Core.fsproj  Permissions.fs
Mochi.Simulator/: Evaluation.fs  Machine.fs  Mochi.Simulator.fsproj
Specification/: grammar.md  phases.md
cmd/: build.go  clean.go  docs.go  format.go  info.go  publish.go  root.go  run.go  test.go  tree.go
compiler/: abelian.go  abelian_test.go  fresh.go  kinds.go  kinds_test.go  linear.go  linear_test.go  util.go
compiler/abelian/: abelian.go  abelian_test.go
compiler/boolean/: boolean.go  boolean_test.go  quine_mccluskey.go  quine_mccluskey_test.go
compiler/kind/: kind.go  kind_test.go
compiler/linear/: linear.go  linear_test.go
compiler/sort/: sort.go
compiler/substitution/: substitution.go
compiler/types/: builder.go  convert.go  types.go
compiler/util/: dots.go  fresh.go  util.go
examples/: ackermann-goal.boba  ackermann.boba  basic-handle.boba  hailstone-goal.boba  multiple-resume.boba  overload-goal.boba  state-handler.boba  super-basic.boba
mochivm/: .clang-format  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md
mochivm/src/: battery_sdl.h  battery_uv.c  debug.c  debug.h  memory.h  mochivm.h  object.c  object.h  opcodes.h  value.c  value.h  value_nan_tagged.h  vm.c  vm_interpreter.c
mochivm/test/: mochivm_test.h  test_conds.check  test_foreign.check  test_frames.check  test_numerics.check  test_refs.check  unit_test.check
prim/: 0-prim-combinators.boba  1-prim-bool.boba  2-prim-numbers.boba  3-prim-strings.boba  4-prim-converions.boba  4-prim-conversions.boba  5-prim-ref.boba  6-prim-collection.boba  7-prim-overloads.boba  8-prim-concurrency.boba  core-boolean.boba  core-collections.boba  core-combinators.boba  core-concurrency.boba  core-conversions.boba  core-kinds.boba  core-numbers.boba  core-overloads.boba  core-ref.boba  core-strings.boba  core.boba  prim-bool.boba
runtime/: bytecode.go  fiber.go  frame.go  instruction.go  machine.go  numeric.go  value.go
src/: battery_sdl.c  battery_uv.h  common.h  debug.c  debug.h  memory.c  memory.h  mochivm.h  object.c  object.h  opcodes.h  value_ptr_tagged.h  value_union.h  vm.c  vm.h  vm_interpreter.c
test/: ackermann.boba  ambiguous.boba  caesar-cipher.boba  classes.boba  closure-capture-order.boba  combinators.boba  datatype.boba  dot-overload.boba  export.boba  fundeps.boba  go-native-wrap.boba  hailstone.boba  handle-closure.boba  handle-context.boba  handle-multiret.boba  handle.boba  handler-order.boba  if-expr.boba  import-reexport.boba  import-remote.boba  import.boba  iterators.boba  let-order.boba  lists.boba  multiple-resume.boba  nested-handlers.boba  numbers.boba  nurseries.boba  overload.boba  pattern-synonyms.boba  patterns.boba  permissions.boba  prims.boba  pseudorandom.boba  ranges.boba  rec-overload.boba  recdata.boba  records.boba  run-tests.fsx  semigroupoid.boba  (+18 more)
test/correct-main/: closure-capture-order.boba  datatype.boba  else-expr.boba  go-native-wrap.boba  handle-escape.boba  handle-multiret.boba  if-expr.boba  lists.boba  nested-handlers.boba  overload.boba  permissions.boba  state-handler.boba  tags.boba  test-example.boba  tiny-test.boba  tuples.boba  type-assert.boba  variants.boba  while-expr.boba
test/correct-test/: ackermann.boba  export.boba  functor.boba  fundeps.boba  hailstone.boba  handle-context.boba  handler-order.boba  import.boba  iterators.boba  let-order.boba  multiple-fundeps.boba  multiple-resume.boba  numbers.boba  nurseries.boba  pattern-synonyms.boba  patterns.boba  pseudorandom.boba  ranges.boba  rec-overload.boba  recdata.boba  semigroupoid.boba  type-synonym.boba  typeable.boba
test/wrong/: for-comp-incomplete.boba  for-effect-incomplete.boba  for-fold-incomplete.boba  instance-consume-extra.boba  instance-extra-effect.boba  instance-produce-extra.boba  instance-touch-extra.boba  nursery-no-escape.boba
